--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
 		      // animation
 		      playerHand.style.animation = "shakePlayer 2s ease";
 		      computerHand.style.animation = "shakeComputer 2s ease";
+		      playerHand.src = `rock.png`;
+		      computerHand.src = `rock.png`;
 		  });
 	      });
 
