--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	  document.getElementById("player-name").innerHTML = name;
 	  if (name === "") {
 	      name.required = true;
-	      document.getElementById("player-name").innerHTML = "Please type in a name!";
+	      alert("Please enter a name!");
 	  }
 	  
 	  else {
