--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="intro">
 	<h1>Rock Paper Scissors!</h1>
 	<div>
-	  <button id="start-button" class="begin" onclick="checkName()">Start</button>
+	  <button onclick="checkName()">Start</button>
 	</div>
       </div>
       <div class="match fadeOut">
